# b1nary-xlayer-hackathon

./: .gitignore  README.md  llms.txt
backend/: .dockerignore  .env.example  .env.xlayer.example  .gitignore  CHANGELOG.md  Dockerfile  pyproject.toml
backend/docs/: AGENT_TRADING_FLOW.md  MM_ONBOARDING.md
backend/scripts/: backfill_collateral_usd.py  backfill_group_id.py  mainnet_overview.py
backend/src/: config.py  main.py
backend/src/api/: activity.py  analytics.py  demo.py  deps.py  faucet.py  leaderboard.py  mm_routes.py  mm_ws.py  notifications.py  results.py  routes.py  solana_faucet.py  xlayer_faucet.py  yield_routes.py
backend/src/bots/: circuit_breaker_bot.py  event_indexer.py  expiry_settler.py  notification_bot.py  otoken_manager.py  price_updater.py  runner.py  solana_circuit_breaker_bot.py  solana_event_indexer.py  solana_expiry_settler.py  solana_otoken_manager.py  weekly_aggregator.py  xlayer_circuit_breaker_bot.py  xlayer_event_indexer.py  xlayer_expiry_settler.py  (+3 more)
backend/tests/: conftest.py  test_activity.py  test_api.py  test_black_scholes.py  test_bots.py  test_bridge.py  test_capacity_api.py  test_chain_abstraction.py  test_circuit_breaker.py  test_contracts.py  test_ed25519.py  test_email_service.py  test_event_indexer_enrichment.py  test_expiry_settler.py  test_explorer_urls.py  test_friday_expiries.py  test_leaderboard.py  test_notification_bot.py  test_notifications_api.py  test_price_sheet.py  test_pricing_utils.py  test_settler_emails.py  test_solana_circuit_breaker.py  test_solana_event_indexer.py  test_solana_expiry_settler.py  test_solana_nonce.py  test_solana_quotes.py  test_yield_calculator.py  test_yield_routes.py
market-maker/: .env.example  .env.xlayer.example  Dockerfile  pyproject.toml
market-maker/scripts/: fund_mm.py  history_to_csv.py
market-maker/src/: api_client.py  capacity.py  config.py  fill_listener.py  hedge_executor.py  main.py  position_tracker.py  pricer.py  quote_builder.py  signer.py  startup_recovery.py  trade_logger.py
market-maker/tests/: test_api_client.py  test_capacity.py  test_dual_signing.py  test_hedge_executor.py  test_hedge_simulation.py  test_quote_builder.py  test_trade_logger.py
(+238 files in other folders)
