[project]
name = "backend"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "scipy>=1.17.0",
    "supabase>=2.28.0",
    "uvicorn>=0.40.0",
    "web3>=7.14.1",
    "email-validator>=2.0",
    "resend>=2.26.0",
    "solana>=0.36.0",
    "anchorpy>=0.20.1",
    "solders>=0.24.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-xprocess>=1.0.2",
]

[tool.pytest.ini_options]
# anchorpy's pytest plugin has a broken import (pytest_xprocess vs xprocess)
# Disable it since we don't use anchorpy fixtures in tests.
addopts = "-p no:pytest_anchorpy"

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-xprocess>=1.0.2",
]

